# SegaCxx

./: .clang-format  .clangd  .gitignore  Dockerfile  LICENSE.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/error/: CMakeLists.txt  error.h
src/lib/common/memory/: CMakeLists.txt  device.h  types.h
src/lib/common/util/: CMakeLists.txt  passkey.h  unreachable.h
src/lib/m68k/: CMakeLists.txt
src/lib/m68k/common/: CMakeLists.txt  context.h
src/lib/m68k/emulator/: CMakeLists.txt  emulator.cpp  emulator.h
src/lib/m68k/emulator/test/: CMakeLists.txt  main.cpp
src/lib/m68k/error/: CMakeLists.txt  error.cpp  error.h
src/lib/m68k/instruction/: CMakeLists.txt  decode.cpp  execute.cpp  instruction.cpp  instruction.h  print.cpp
src/lib/m68k/memory/: CMakeLists.txt  bus.h  device.h  types.h
src/lib/m68k/opcodes/: CMakeLists.txt  instructions.cpp  instructions.h  targets.cpp  targets.h
src/lib/m68k/registers/: CMakeLists.txt  registers.cpp  registers.h
src/lib/sega/: CMakeLists.txt
src/lib/sega/executor/: CMakeLists.txt  executor.cpp  executor.h  interrupt_handler.cpp  interrupt_handler.h
src/lib/sega/gui/: CMakeLists.txt  gui.cpp  gui.h
src/lib/sega/image_saver/: CMakeLists.txt  image_saver.cpp  image_saver.h
src/lib/sega/memory/: CMakeLists.txt  bus_device.cpp  bus_device.h  controller_device.cpp  controller_device.h  m68k_ram_device.cpp  m68k_ram_device.h  psg_device.cpp  psg_device.h  rom_device.cpp  rom_device.h  sram_access_register_device.cpp  sram_access_register_device.h  trademark_register_device.cpp  trademark_register_device.h  vdp_device.cpp  vdp_device.h  ym2612_device.cpp  ym2612_device.h  z80_device.cpp  z80_device.h
src/lib/sega/rom_loader/: CMakeLists.txt  rom_loader.cpp  rom_loader.h
src/lib/sega/shader/: CMakeLists.txt  shader.cpp  shader.h
src/lib/sega/state_dump/: CMakeLists.txt  state_dump.cpp  state_dump.h
src/lib/sega/video/: CMakeLists.txt  colors.cpp  colors.h  constants.h  plane.cpp  plane.h  sprite_table.cpp  sprite_table.h  tilemap.cpp  tilemap.h  video.cpp  video.h
utils/: cram_viewer.py
